--- a/ex02/Makefile
+++ b/ex02/Makefile
@@ -6,7 +6,7 @@
 #    By: amak <amak@student.42.fr>                  +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/06/23 14:05:43 by amak              #+#    #+#              #
-#    Updated: 2024/08/09 17:43:48 by amak             ###   ########.fr        #
+#    Updated: 2024/08/09 22:10:13 by amak             ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -20,6 +20,7 @@ SOURCES =	Bureaucrat.cpp \
 			AForm.cpp \
 			ShrubberyCreationForm.cpp \
 			RobotomyRequestForm.cpp \
+			PresidentialPardonForm.cpp \
 			main.cpp
 			
 OBJECTS = $(SOURCES:.cpp=.o)
